packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-002.ttrp
// expect: TTRP-PD-002
container c target polars """pandas
x.apply(amount)
"""
